step 0.76 for BlaPlugin, trying to replace all the return type bullshit with plain old types...M~A~G~I~C step 0.5 for BlaVerifier, we no longer skip primitive param operators